--- a/RP_Project/bringup/package.xml
+++ b/RP_Project/bringup/package.xml
@@ -7,7 +7,7 @@
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="juandrg.94@gmail.com">RP_Project</maintainer>
+  <maintainer email="juandrg.94@gmail.com">rp_project</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
@@ -54,6 +54,11 @@
   <build_depend>std_msgs</build_depend>
   <build_depend>sensor_msgs</build_depend>
   <build_depend>geometry_msgs</build_depend>
+  
+  <build_depend>gmapping</build_depend>
+
+  <exec_depend>robot_state_publisher</exec_depend>
+  <exec_depend>gmapping</exec_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
