--- a/RP_Project/navigation/package.xml
+++ b/RP_Project/navigation/package.xml
@@ -7,7 +7,7 @@
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="softillusion.robotics@gmail.com">Soft-illusion</maintainer>
+<maintainer email="juandrg.94@gmail.com">Juan Rodriguez</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
